# CRS2

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: common.h  crs2.c  crs2.h  function.c  function.h  functionsChecks.c  functionsChecks.h  main.c  point.c  point.h
src/functions/: functionsChecks.c  functionsChecks.h  testFunctions.c  testFunctions.h
